# diabetes-readmission-prediction

./: .gitignore  README.md  diabetes-readmission-prediction.ipy  diabetes-readmission-prediction.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
code/: Prediction on Hospital Readmission.ipynb  diabetes-readmission-prediction.ipy  diabetes-readmission-prediction.ipynb  hospital_readmission_streamlit.py  optimal_threshold.pkl  simplified_features.pkl  simplified_lightgbm_model.pkl  simplified_preprocessor.pkl
notes/: Datafield.txt  Q.txt
